--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <!-- Jumbotron -->
-    <div class="container mt-5 w-50">
+    <div class="container mt-5 mb-14 w-50">
       <h2 class="color">Password Validator</h2>
       <div class="form-group">
         <label for="additionalInfo">Enter Password To Check:</label>
